# RustyFox

./: Cargo.toml  README.md
src/: lib.rs
src/element/: element_traits.rs  jacobi.rs  mod.rs  operator_trait.rs
src/geometry/: geometry_traits.rs  mod.rs  simplex.rs
