[package]
name = "rustyfox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.0", features=["rayon", "blas", "matrixmultiply-threading"]}
num = {version="0.4.0", features=["num-bigint"]}

